--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -550,12 +550,6 @@ toolbarspring {
         @media (prefers-color-scheme: dark) {
             background: linear-gradient(to bottom, #000000FF 0px, #000000FF 0.55px,  #00000097 0.55px,  #00000097 1.01px, #00000071 1.01px) !important;
         }
-/*         @media (prefers-color-scheme: light) {
-            background: linear-gradient(to bottom, #00000023 0px, #00000023 0.55px, #00000015 0.55px, #00000015 1.01px, #0000000D 1.01px, #0000000D 1.55px, #00000007 1.55px, #00000007 2.01px, #00000003 2.01px, #00000003 2.55px, #00000002 2.55px, #00000002 3.01px, #00000001 3.01px, #00000001 4.01px, transparent 4.01px), #0000000D !important;
-        }
-        @media (prefers-color-scheme: dark) {
-            background: linear-gradient(to bottom, #000000FF 0px, #000000FF 0.55px,  #00000040 0.55px,  #00000040 1.01px, transparent 1.01px), #00000071 !important;
-        } */
     }
     
     #TabsToolbar {
@@ -665,9 +659,12 @@ toolbarspring {
         }
     }
     
-    .tabbrowser-tab:not([pinned]) {
+    #tabbrowser-tabs:not([movingtab]) .tabbrowser-tab:not([pinned]) {
         transition: min-width 350ms, max-width 350ms !important;
-            margin-inline-start: 0 !important;
+    }
+    
+    .tabbrowser-tab:not([pinned]) {
+        margin-inline-start: 0 !important;
         &[fadein]:not([style*="max-width"]) {
             max-width: var(--tab-max-width) !important;
         }
@@ -773,12 +770,17 @@ toolbarspring {
         }
     }
     
-    .tabbrowser-tab[pinned] {
-        padding: 0 var(--tab-margin) !important;
+    #tabbrowser-tabs {
+        font-size: 12px !important;
+        min-height: var(--tab-min-height) !important;
+        padding-inline: var(--tab-overflow-pinned-tabs-width) 0 !important;
+    }
+    
+    #tabbrowser-tabs:not([movingtab]) .tabbrowser-tab:not([pinned]) {
+        transition: var(--tab-transition) !important;
     }
     
     .tabbrowser-tab:not([pinned]) {
-        transition: var(--tab-transition) !important;
         padding: 0 !important;
         &[fadein]:not([selected]) {
             margin: 0 var(--tab-margin) !important;
@@ -795,6 +797,10 @@ toolbarspring {
         }
     }
     
+    .tabbrowser-tab[pinned] {
+        padding: 0 var(--tab-margin) !important;
+    }
+    
     #wrapper-urlbar-container {
         display: none !important;
     }
@@ -805,12 +811,6 @@ toolbarspring {
     
     .tab-content:not([pinned]) {
         padding: 0 10px !important;
-    }
-    
-    #tabbrowser-tabs {
-        font-size: 12px !important;
-        min-height: var(--tab-min-height) !important;
-        padding-inline: var(--tab-overflow-pinned-tabs-width) 0 !important;
     }
     
     .tab-background {
@@ -968,6 +968,11 @@ toolbarspring {
         outline-color: var(--toolbarbutton-active-outline-color) !important;
         color-scheme: light dark !important;
     }
+}
+
+.tab-background {
+    outline: none !important;
+    outline-offset: 0 !important;
 }
 
 .tab-loading-burst {
