--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -30,9 +30,9 @@
 
 /*  Delete until the next comment to get Firefox default background color (especially it will appear slightly bluish in dark mode).  */
 :root {
-    --button-background-color: light-dark( rgba(0, 0, 0, .0275), rgba(255, 255, 255, .0325) ) !important;
-    --button-background-color-hover: light-dark( rgba(0, 0, 0, .055), rgba(255, 255, 255, .065) ) !important;
-    --button-background-color-active: light-dark( rgba(0, 0, 0, .11), rgba(255, 255, 255, .13) ) !important;
+    --button-background-color: light-dark( rgba(0, 0, 0, .0255), rgba(255, 255, 255, .0325) ) !important;
+    --button-background-color-hover: light-dark( rgba(0, 0, 0, .051), rgba(255, 255, 255, .065) ) !important;
+    --button-background-color-active: light-dark( rgba(0, 0, 0, .102), rgba(255, 255, 255, .13) ) !important;
     --newtab-button-background: transparent !important;
     --button-bgcolor: var(--button-background-color) !important;
     --panel-banner-item-background-color: var(--button-background-color) !important;
@@ -51,11 +51,11 @@
     --button-background-color-ghost-active: var(--button-background-color-active) !important;
     --input-border-color: var(--button-background-color-active) !important;
     --urlbarView-separator-color: var(--button-background-color-active) !important;
-    --tab-hover-background-color: light-dark( rgba(0, 0, 0, .058), rgba(255, 255, 255, .075) ) !important;
+    --tab-hover-background-color: light-dark( rgba(0, 0, 0, .054), rgba(255, 255, 255, .075) ) !important;
     --sidebar-border-color: light-dark( rgb(224, 224, 224), rgb(91, 91, 91) ) !important;
     --newtab-button-static-background: light-dark(#F6F6F6, #3C3C3C) !important;
-    --newtab-button-static-hover-background: light-dark(#EFEFEF, #434343) !important;
-    --newtab-button-static-active-background: light-dark(#E1E1E1, #505050) !important;
+    --newtab-button-static-hover-background: light-dark(#F0F0F0, #434343) !important;
+    --newtab-button-static-active-background: light-dark(#E3E3E3, #505050) !important;
     --toolbar-bgcolor: light-dark(#FDFDFD, #363636) !important;
     --input-bgcolor: light-dark(#FFFFFF, #434343) !important;
     --tabpanel-background-color: light-dark(#FDFDFD, #363636) !important;
